plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    implementation 'com.squareup.okhttp3:okhttp:4.9.3'

    //jwt
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
    implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
    implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'

    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.0'

    //jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    //validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //database
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    runtimeOnly 'com.mysql:mysql-connector-j'

     //actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    //lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    //test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'com.h2database:h2'
    testImplementation "org.testcontainers:testcontainers:1.20.4"
    testImplementation "org.testcontainers:junit-jupiter:1.20.4"


    // SWAGGER
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    //RabbitMQ
    implementation 'org.springframework.boot:spring-boot-starter-amqp'


}

tasks.named('test') {
    useJUnitPlatform()
}
